[gd_scene load_steps=15 format=3 uid="uid://du5v1xpm5fjcm"]

[ext_resource type="Script" uid="uid://q3wblwc0jg28" path="res://Scripts/Objects/sprite_object.gd" id="1_i7wd5"]
[ext_resource type="PackedScene" uid="uid://byqy3gmm478yp" path="res://Misc/BaseObject/base_object.tscn" id="1_nxel7"]
[ext_resource type="Texture2D" uid="uid://bt5ep2bnr2x76" path="res://Misc/SpriteObject/origin.png" id="2_1i6gu"]
[ext_resource type="Shader" uid="uid://c8aq5jfqgs2ro" path="res://Scripts/Shaders/SpriteShader.gdshader" id="3_lejuk"]
[ext_resource type="Texture2D" uid="uid://cppqjhaoi70l5" path="res://Misc/EasyBlend/Blends/add.png" id="3_updi2"]
[ext_resource type="Texture2D" uid="uid://dv27xjbwfkacl" path="res://Misc/TestAssets/Lamp.png" id="5_nxel7"]
[ext_resource type="Shader" uid="uid://b5yyx2nj4wj3x" path="res://Scripts/Shaders/SpriteSelection.gdshader" id="6_4cvp6"]
[ext_resource type="Shader" uid="uid://di5vad1bc51ed" path="res://Scripts/Shaders/SpriteSelectionWA.gdshader" id="7_4xt5n"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4cvp6"]
resource_local_to_scene = true
shader = ExtResource("3_lejuk")
shader_parameter/enabled = false
shader_parameter/Blend = ExtResource("3_updi2")
shader_parameter/Intensity = 1.0
shader_parameter/wiggle = false
shader_parameter/rotation = 0.0
shader_parameter/rotation_offset = Vector2(0.5, 0.5)

[sub_resource type="CanvasTexture" id="CanvasTexture_4xt5n"]
diffuse_texture = ExtResource("5_nxel7")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5cd6y"]
resource_local_to_scene = true
shader = ExtResource("6_4cvp6")
shader_parameter/line_color = Vector4(0, 0, 0, 0.5)
shader_parameter/line_thickness = 2.0
shader_parameter/frequency = 10.0
shader_parameter/phase_speed = 1.0
shader_parameter/base_line_color = Vector4(1, 1, 1, 0.5)
shader_parameter/wiggle = false
shader_parameter/rotation = 0.0
shader_parameter/rotation_offset = Vector2(0.5, 0.5)
shader_parameter/add_margins = false
shader_parameter/alpha_threshold = 0.15

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u0cpf"]
shader = ExtResource("7_4xt5n")
shader_parameter/ant_color_1 = Color(1, 1, 1, 0.392157)
shader_parameter/ant_color_2 = Color(0, 0, 0, 0.392157)
shader_parameter/ant_width = 1.5
shader_parameter/ant_length = 10.0
shader_parameter/ant_speed = 30.0

[sub_resource type="Gradient" id="Gradient_4xt5n"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_relpp"]
gradient = SubResource("Gradient_4xt5n")
width = 32
height = 32

[node name="SpriteObject" node_paths=PackedStringArray("sprite_object", "grab_object") instance=ExtResource("1_nxel7")]
script = ExtResource("1_i7wd5")
sprite_object = NodePath("Modifier1/Modifier/Sprite2D")
grab_object = NodePath("Modifier1/Modifier/Sprite2D/Grab")
sprite_type = "Sprite2D"

[node name="Sprite2D" type="Sprite2D" parent="Modifier1/Modifier" index="1"]
unique_name_in_owner = true
physics_interpolation_mode = 1
material = SubResource("ShaderMaterial_4cvp6")
texture = SubResource("CanvasTexture_4xt5n")

[node name="Selection" type="Sprite2D" parent="Modifier1/Modifier/Sprite2D" index="0"]
unique_name_in_owner = true
visible = false
z_index = 4096
z_as_relative = false
material = SubResource("ShaderMaterial_5cd6y")
texture = SubResource("CanvasTexture_4xt5n")

[node name="Grab" type="TextureButton" parent="Modifier1/Modifier/Sprite2D" index="1"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
z_index = 4096
material = SubResource("ShaderMaterial_u0cpf")
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -46.0
offset_right = -46.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
texture_normal = SubResource("GradientTexture2D_relpp")
stretch_mode = 0

[node name="WiggleOrigin" type="Sprite2D" parent="Modifier1/Modifier/Sprite2D" index="2"]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 0, 0, 1)
z_index = 4096
z_as_relative = false
texture = ExtResource("2_1i6gu")

[node name="FollowComponent" parent="." index="3" node_paths=PackedStringArray("actor")]
actor = NodePath("..")

[node name="Movements" parent="." index="4" node_paths=PackedStringArray("actor")]
actor = NodePath("..")

[node name="AnimatedSpriteTexture" parent="." index="6" node_paths=PackedStringArray("sprite_node")]
sprite_node = NodePath("../Modifier1/Modifier/Sprite2D")

[connection signal="timeout" from="Animation" to="." method="animation"]
